# minirt_mesh_converter

./: .gitignore  .pre-commit-config.yaml  README.md  minirt_converter.py  pyproject.toml  requirements_dev.txt  setup.py
docs/: convert.html  helpers.html  index.html  main.html  minirt_converter.html  search.js
docs/minirt_converter/: convert.html  helpers.html  main.html
minirt_converter/: __init__.py  convert.py  helpers.py  main.py
